--- a/app/.htaccess
+++ b/app/.htaccess
@@ -2,11 +2,11 @@
 # BEGIN WordPress
 <IfModule mod_rewrite.c>
 RewriteEngine On
-RewriteBase /_Chicachic/htdocs-new/app/
+RewriteBase /Chicfit/app/
 RewriteRule ^index\.php$ - [L]
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
-RewriteRule . /_Chicachic/htdocs-new/app/index.php [L]
+RewriteRule . /Chicfit/app/index.php [L]
 </IfModule>
 
 # END WordPress
