--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,4 @@ app/.htaccess
 /app/.htaccess
 app/wp-content/themes/mediakit/css/mediakit.css
 app/wp-content/themes/mediakit/css/mediakit.css.map
+node_modules/
